<resources>
    <string name="app_name">TextLinkify</string>
    <string name="module_settings">Module settings</string>
    <string name="include_system_apps">Include system apps</string>
    <string name="phone_numbers">Phone numbers</string>
    <string name="email_addresses">E-mail addresses</string>
    <string name="web_urls">Web URLs</string>
    <string name="map_addresses">Map addresses</string>
    <string name="app_preferences">Settings</string>
    <string name="app_description">Highlight phone numbers, web urls, e-mail addresses and map addresses in any app</string>
    <string name="global_text_links">Global text links</string>
    <string name="show_app_icon">Show app icon</string>
    <string name="enable_for_all_apps">Enable for all apps</string>
    <string name="enable_for_apps">Enable for apps</string>
    <string name="disable_for_apps">Disable for apps</string>
    <string name="app_settings">App settings</string>
    <string name="custom_app_settings">Custom app settings</string>
    <string name="text_links">Text links</string>
    <string name="loading_apps">Loading apps</string>
</resources>
